--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/bootstrap.bundle.js"></script>
+    <script src="https://kit.fontawesome.com/5f80e9e895.js" crossorigin="anonymous"></script>
     <title></title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-dark p-3">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark p-3">
             <div class="container-fluid">
                 <a href="#page-top" class="navbar-brand text-white">WebDesign<span class="text-success">Pro</span></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                    <i class="fas fa-bars"></i>
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="navbarContent">
@@ -28,5 +29,10 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="bg-success">
+            <h2>Legjobb</h2>
+        </section>
+    </main>
 </body>
 </html>
