--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="" class="nav-link text-white hover-success h5">Szolgáltatásaink</a></li>
-                    <li class="nav-item"><a href="" class="nav-link text-white hover-success h5">Referenciáink</a></li>
-                    <li class="nav-item"><a href="" class="nav-link text-white hover-success h5">Rólunk</a></li>
-                    <li class="nav-item"><a href="" class="nav-link text-white hover-success h5">Kapcsolat</a></li>
+                    <li class="nav-item"><a href="" class="nav-link text-white hover-success">Szolgáltatásaink</a></li>
+                    <li class="nav-item"><a href="" class="nav-link text-white hover-success">Referenciáink</a></li>
+                    <li class="nav-item"><a href="" class="nav-link text-white hover-success">Rólunk</a></li>
+                    <li class="nav-item"><a href="" class="nav-link text-white hover-success">Kapcsolat</a></li>
                 </ul>
             </div>
         </nav>
     </header>
     <main>
-        <section class="bg-success">
-            <h2>Legjobb</h2>
+        <section class="bg-dark min-vh-100">
+
         </section>
     </main>
 </body>
