Kezdőlap kész Rólam szekció kezdete

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link">
-                            <i class="uil uil-user nav_icon"></i> Rólunk
+                            <i class="uil uil-user nav_icon"></i> Rólam
                         </a>
                     </li>
                     <li class="nav_item">
@@ -93,12 +93,26 @@
                 </svg>
             </div>
             <div class="home_data">
-                <h1 class="home_title">Web <br><span class="s-primary">Ease</span></h1>
+                <h1 class="home_title">Web <br> <span class="s-primary">Ease</span></h1>
                 <h3 class="home_subtitle">Webfejlesztés</h3>
                 <p class="home_description">Magas szintű tapasztalat, tudás és minőségi munka.</p>
-                <a href="#contact" class="button button--flex">
-                    Lépj kapcsolatba velem <i class="uil uil-message"></i>
+                <a href="#contact" class="button button-flex">
+                    Lépj kapcsolatba velem <i class="uil uil-message button_icon"></i>
                 </a>
+            </div>
+            <div class="home_scroll">
+                <a href="#about" class="home_scroll-button button-flex">
+                    <i class="uil uil-mouse-alt home_scroll-mouse"></i>
+                    <span class="home-scroll-name">Menj lejjebb</span>
+                    <i class="uil uil-arrow-down home_scroll-arrow"></i>
+                </a>
+            </div>
+        </section>
+        <section class="about section" id="about">
+            <h2 class="section_title">Rólam</h2>
+            <span class="section_subtitle">Bemutatkozásom</span>
+            <div class="about_container container grid">
+                
             </div>
         </section>
     </main>
