--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                     </li>
                     <li class="nav_item">
                         <a href="#skills" class="nav_link">
-                            <i class="uil uil-file-alt nav_icon"></i> Tudásunk
-                        </a>
-                    </li>
-                    <li class="nav_item">
-                        <a href="#" class="nav_link">
                             <i class="uil uil-briefcase-alt nav_icon"></i> Szolgáltatásaink
                         </a>
                     </li>
                     <li class="nav_item">
+                        <a href="#" class="nav_link">
+                            <i class="uil uil-pricetag-alt nav_icon"></i> Referenciáink
+                        </a>
+                    </li>
+                    <li class="nav_item">
                         <a href="#portofilo" class="nav_link">
-                            <i class="uil uil-scenery nav_icon"></i> Referenciáink
+                            <i class="uil uil-scenery nav_icon"></i> Árajánlat
                         </a>
                     </li>
                     <li class="nav_item">
@@ -112,8 +112,24 @@
             <h2 class="section_title">Rólam</h2>
             <span class="section_subtitle">Bemutatkozásom</span>
             <div class="about_container container grid">
-                
+                <img src="images/me.png" alt="Laczkó Kevin-t tartalmazó kép" class="about_img">
+                <div class="about_data">
+                    <p class="about_description">Webfejlesztő, kiterjedt tudással, tapasztalattal. HTML-ben dologzok legtöbbet, de WordPress-t is tudok használni.</p>
+                    <div class="about_info">
+                        <div>
+                            <span class="about_info-title">2+</span>
+                            <span class="about_info-name">évnyi <br>Tudás</span>
+                        </div>
+                        <div>
+                            <span class="about_info-title">20+</span>
+                            <span class="about_info-name"> befejezett<br>Projekt</span>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </section>
+        <section class="services section" id="services">
+            
         </section>
     </main>
     <script src="js/main.js"></script>
