--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#skills" class="nav_link">
+                        <a href="#services" class="nav_link">
                             <i class="uil uil-briefcase-alt nav_icon"></i> Szolgáltatásaink
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#" class="nav_link">
-                            <i class="uil uil-pricetag-alt nav_icon"></i> Referenciáink
+                        <a href="#portfolio" class="nav_link">
+                            <i class="uil uil-image nav_icon"></i> Referenciáink
                         </a>
                     </li>
                     <li class="nav_item">
-                        <a href="#portofilo" class="nav_link">
-                            <i class="uil uil-scenery nav_icon"></i> Árajánlat
+                        <a href="#price" class="nav_link">
+                            <i class="uil uil-pricetag-alt nav_icon"></i> Árajánlat
                         </a>
                     </li>
                     <li class="nav_item">
@@ -127,9 +127,31 @@
                     </div>
                 </div>
             </div>
+            <button class="button button-flex border-0 fs">
+                Olvass többet <i class="uli uil-book-alt button_icon"></i>
+            </button>
         </section>
         <section class="services section" id="services">
-            
+            <h2 class="section_title">Szolgáltatásaink</h2>
+            <span class="section_subtitle">Mit tudok kínálni</span>
+            <div class="services_container container grid">
+                <div class="services_content">
+                    <div>
+                        <i class="uil uil-web-grid services_icon"></i>
+                        <h3 class="services_title">Webfejlesztés</h3>
+                    </div>
+                    <span class="button button-flex button-small button-link services_button">
+                        Többet
+                        <i class="uil uil-arrow-right button_icon"></i>
+                    </span>
+                    <div class="services_modal">
+                        <div class="services_modal-content">
+                            <h4 class="services_modal-title">Webfejlesztés</h4>
+                            <i class="uil uil-times services_modal-close"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <script src="js/main.js"></script>
