--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Ease</title>
     <!--Swiper-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <!--Sima-->
     <link rel="stylesheet" href="css/style.css">
     <!--Unicons-->
@@ -25,7 +25,7 @@
                     </li>
                     <li class="nav_item">
                         <a href="#about" class="nav_link">
-                            <i class="uil uil-user nav_icon"></i> Rólam
+                            <i class="uil uil-user nav_icon"></i> Rólunk
                         </a>
                     </li>
                     <li class="nav_item">
@@ -97,7 +97,7 @@
                 <h3 class="home_subtitle">Webfejlesztés</h3>
                 <p class="home_description">Magas szintű tapasztalat, tudás és minőségi munka.</p>
                 <a href="#contact" class="button button-flex">
-                    Lépj kapcsolatba velem <i class="uil uil-message button_icon"></i>
+                    Lépj kapcsolatba velünk <i class="uil uil-message button_icon"></i>
                 </a>
             </div>
             <div class="home_scroll">
@@ -109,19 +109,19 @@
             </div>
         </section>
         <section class="about section" id="about">
-            <h2 class="section_title">Rólam</h2>
-            <span class="section_subtitle">Bemutatkozásom</span>
+            <h2 class="section_title">Rólunk</h2>
+            <span class="section_subtitle">Bemutatkozásunk</span>
             <div class="about_container container grid">
                 <img src="images/me.png" alt="Laczkó Kevin-t tartalmazó kép" class="about_img">
                 <div class="about_data">
-                    <p class="about_description">Webfejlesztő, kiterjedt tudással, tapasztalattal. HTML-ben dologzok legtöbbet, de WordPress-t is tudok használni.</p>
+                    <p class="about_description">Webfejlesztő, kiterjedt tudással, tapasztalattal. HTML-ben dologzunk legtöbbet, de WordPress-t is tudunk alkalmazni.</p>
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">2+</span>
+                            <span class="about_info-title">4+</span>
                             <span class="about_info-name">évnyi <br>Tudás</span>
                         </div>
                         <div>
-                            <span class="about_info-title">20+</span>
+                            <span class="about_info-title">50+</span>
                             <span class="about_info-name"> befejezett<br>Projekt</span>
                         </div>
                     </div>
@@ -133,11 +133,12 @@
         </section>
         <section class="services section" id="services">
             <h2 class="section_title">Szolgáltatásaink</h2>
-            <span class="section_subtitle">Mit tudok kínálni</span>
+            <span class="section_subtitle">Mit tudunk kínálni</span>
             <div class="services_container container grid">
+                <!--1-->
                 <div class="services_content">
                     <div>
-                        <i class="uil uil-web-grid services_icon"></i>
+                        <i class="uil uil-arrow services_icon"></i>
                         <h3 class="services_title">Webfejlesztés</h3>
                     </div>
                     <span class="button button-flex button-small button-link services_button">
@@ -148,12 +149,154 @@
                         <div class="services_modal-content">
                             <h4 class="services_modal-title">Webfejlesztés</h4>
                             <i class="uil uil-times services_modal-close"></i>
+                            <ul class="services_modal-services grid">
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Teljesen mobilbarát</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Karbantartás</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Egyediség</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Domain regisztráció</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--2-->
+                <div class="services_content">
+                    <div>
+                        <i class="uil uil-monitor services_icon"></i>
+                        <h3 class="services_title">Rendszergazdaság</h3>
+                    </div>
+                    <span class="button button-flex button-small button-link services_button">
+                        Többet
+                        <i class="uil uil-arrow-right button_icon"></i>
+                    </span>
+                    <div class="services_modal">
+                        <div class="services_modal-content">
+                            <h4 class="services_modal-title">Rendszergazdaság</h4>
+                            <i class="uil uil-times services_modal-close"></i>
+                            <ul class="services_modal-services grid">
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Elérhetőség</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Ügyintézés</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Biztonság</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Felhasználói fiókok kezelése</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--3-->
+                <div class="services_content">
+                    <div>
+                        <i class="uil uil-wrench services_icon"></i>
+                        <h3 class="services_title">Szervizelés</h3>
+                    </div>
+                    <span class="button button-flex button-small button-link services_button">
+                        Többet
+                        <i class="uil uil-arrow-right button_icon"></i>
+                    </span>
+                    <div class="services_modal">
+                        <div class="services_modal-content">
+                            <h4 class="services_modal-title">Szervizelés</h4>
+                            <i class="uil uil-times services_modal-close"></i>
+                            <ul class="services_modal-services grid">
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Garancia</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Online segítség</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Gyors válasz</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle services_modal-icon"></i>
+                                    <p>Elégedettség</p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="portfolio section" id="portfolio">
+            <h2 class="section_title">Referenciáink</h2>
+            <span class="section_subtitle">Legújabb munkánik</span>
+            <div class="portfolio_container container swiper-container">
+                <div class="swiper-wrapper">
+                    <!--1-->
+                    <div class="portfolio_content grid swiper-slide">
+                        <img src="images/logof-removebg-preview 2.png" class="portfolio_img" alt="Fülemüle házak logója">
+                        <div class="portfolio_data">
+                            <h3 class="portfolio_title">Fülemüle Vendégházak</h3>
+                            <a href="https://www.fulemulehazak.hu" target="_blank" class="button button-flex button-small portfolio_button">
+                                Megnézem
+                                <i class="uil uil-arrow-right button_icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!--2-->
+                    <div class="portfolio_content grid swiper-slide">
+                        <img src="images/logo 2 2.png" class="portfolio_img" alt="Vásárolj szabadon logója">
+                        <div class="portfolio_data">
+                            <h3 class="portfolio_title">Vásárolj szabadon</h3>
+                            <span class="portfolio_subtitle">Fejlesztés alatt</span>
+                            <a href="https://www.vasaroljszabadon.hu" target="_blank" class="button button-flex button-small portfolio_button">
+                                Megnézem
+                                <i class="uil uil-arrow-right button_icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-next">
+                    <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-button-prev">
+                    <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+        <section class="project section">
+            <div class="project_bg">
+                <div class="project_container container grid">
+                    <div class="project_data">
+                        <h2 class="project_title">Szeretnél egy weboldalt?</h2>
+                        <p class="project_description">Kérj egy árajánlatot és a lehető leggyorsabban elküldjük neked.</p>
+                        <a href="#price" class="button button-flex">
+                            Árajánlat
+                            <i class="uil uil-pricetag-alt project_icon button_icon"></i>
+                        </a>
+                    </div>
+                    <img src="images/code.jpeg" alt="Egy HTML fájl kódja" class="project_img">
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
