--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link">
+                        <a href="#home" class="nav_link active-link">
                             <i class="uil uil-estate nav_icon"></i> Kezdőlap
                         </a>
                     </li>
@@ -52,6 +52,7 @@
                 <i class="uil uil-times nav_close" id="nav-close"></i>
             </div>
             <div class="nav_btns">
+                <i class="uil uil-moon change-theme" id="theme-button"></i>
                 <div class="nav_toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
                 </div>
@@ -359,6 +360,9 @@
             <p class="footer_copy">&#169; Web Ease. Minden jog fent tartva!</p>
         </div>
     </footer>
+    <a href="#" class="scroll_up" id="scroll-up">
+        <i class="uil uil-arrow-up scrollup_icon"></i>
+    </a>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
