Kész, kivétel az árajánlat

--- a/index.html
+++ b/index.html
@@ -74,39 +74,32 @@
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                     </div>
+                    <div class="home_img">
+                        <svg class="home_blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <mask id="mask0" mask-type="alpha">
+                                <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                                130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                                97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                                0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                            </mask>
+                            <g mask="url(#mask0)">
+                                <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                                165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                                129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                                -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                                <image class="home_blob-img" xlink:href="images/laptop-wave.png"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <div class="home_data">
+                        <h1 class="home_title">Web <br> <span class="s-primary">Ease</span></h1>
+                        <h3 class="home_subtitle">Webfejlesztés</h3>
+                        <p class="home_description">Magas szintű tapasztalat, tudás és minőségi munka.</p>
+                        <a href="#contact" class="button button-flex">
+                            Lépj kapcsolatba velünk <i class="uil uil-message button_icon"></i>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="home_img">
-                <svg class="home_blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <mask id="mask0" mask-type="alpha">
-                        <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
-                        130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
-                        97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
-                        0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                    </mask>
-                    <g mask="url(#mask0)">
-                        <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
-                        165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
-                        129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
-                        -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                        <image class="home_blob-img" xlink:href="images/laptop-wave.png"/>
-                    </g>
-                </svg>
-            </div>
-            <div class="home_data">
-                <h1 class="home_title">Web <br> <span class="s-primary">Ease</span></h1>
-                <h3 class="home_subtitle">Webfejlesztés</h3>
-                <p class="home_description">Magas szintű tapasztalat, tudás és minőségi munka.</p>
-                <a href="#contact" class="button button-flex">
-                    Lépj kapcsolatba velünk <i class="uil uil-message button_icon"></i>
-                </a>
-            </div>
-            <div class="home_scroll">
-                <a href="#about" class="home_scroll-button button-flex">
-                    <i class="uil uil-mouse-alt home_scroll-mouse"></i>
-                    <span class="home-scroll-name">Menj lejjebb</span>
-                    <i class="uil uil-arrow-down home_scroll-arrow"></i>
-                </a>
             </div>
         </section>
         <section class="about section" id="about">
@@ -128,9 +121,6 @@
                     </div>
                 </div>
             </div>
-            <button class="button button-flex border-0 fs">
-                Olvass többet <i class="uli uil-book-alt button_icon"></i>
-            </button>
         </section>
         <section class="services section" id="services">
             <h2 class="section_title">Szolgáltatásaink</h2>
@@ -302,25 +292,25 @@
             <div class="fcf-body center">          
                 <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">                   
                     <div class="fcf-form-group">
-                        <label for="Name" class="fcf-label">Your name</label>
+                        <label for="Name" class="fcf-label">Név</label>
                         <div class="fcf-input-group">
                             <input type="text" id="Name" name="Name" class="fcf-form-control" required>
                         </div>
                     </div>
                     <div class="fcf-form-group">
-                        <label for="Email" class="fcf-label">Your email address</label>
+                        <label for="Email" class="fcf-label">Email cím</label>
                         <div class="fcf-input-group">
                             <input type="email" id="Email" name="Email" class="fcf-form-control" required>
                         </div>
                     </div>           
                     <div class="fcf-form-group">
-                        <label for="Message" class="fcf-label">Your message</label>
+                        <label for="Message" class="fcf-label">Üzeneted</label>
                         <div class="fcf-input-group">
                             <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
                         </div>
                     </div>
                     <div class="fcf-form-group">
-                        <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send Message</button>
+                        <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Elküldöm</button>
                     </div>            
                 </form>
                 </div>
