--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@
                 </div>
             </div>
         </section>
+        <section class="price section" id="price">
+            <div class="container grid">
+                <h2 class="section_title">Árajánlat</h2>
+            </div>
+        </section>
         <section class="contact section" id="contact">
             <h2 class="section_title">Lépj kapcsolatba velünk</h2>
             <span class="section_subtitle">Valami kérdésed van? Írj nekünk!</span>
