--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav_logo">Web <span class="s-primary">Ease</span></a>
+            <a href="#" class="nav_logo">Webdesign <span class="s-primary">Pro</span></a>
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list grid">
                     <li class="nav_item">
@@ -93,7 +93,7 @@
                         </svg>
                     </div>
                     <div class="home_data">
-                        <h1 class="home_title">Web <br> <span class="s-primary">Ease</span></h1>
+                        <h1 class="home_title">Webdesign <br> <span class="s-primary">Pro</span></h1>
                         <h3 class="home_subtitle">Webfejlesztés</h3>
                         <p class="home_description">Magas szintű tapasztalat, tudás és minőségi munka.</p>
                         <a href="#contact" class="button button-flex">
@@ -112,11 +112,11 @@
                     <p class="about_description">Webfejlesztő, kiterjedt tudással, tapasztalattal. HTML-ben dologzunk legtöbbet, de WordPress-t is tudunk alkalmazni.</p>
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">4+</span>
+                            <span class="about_info-title">2+</span>
                             <span class="about_info-name">évnyi <br>Tudás</span>
                         </div>
                         <div>
-                            <span class="about_info-title">50+</span>
+                            <span class="about_info-title">30+</span>
                             <span class="about_info-name"> befejezett<br>Projekt</span>
                         </div>
                     </div>
@@ -312,7 +312,7 @@
         <div class="footer_bg">
             <div class="footer_container container grid">
                 <div>
-                    <h1 class="footer_title">Web <span class="s-primary">Ease</span></h1>
+                    <h1 class="footer_title">Webdesign <span class="s-primary">Pro</span></h1>
                 </div>
                 <ul class="footer_links">
                     <li>
@@ -337,7 +337,7 @@
                     </a>
                 </div>
             </div>
-            <p class="footer_copy">&#169; Web Ease. Minden jog fent tartva!</p>
+            <p class="footer_copy">&#169; Webdesign Pro. Minden jog fent tartva!</p>
         </div>
     </footer>
     <a href="#" class="scroll_up" id="scroll-up">
